Update print statement from 'Hello' to 'Goodbye'
Save

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		    max-width: 800px;
 		    margin: 0 auto;
 		    padding: 20px;
-		    background-color: #f5f5f5;
+		    background-color: black;
 		    line-height: 1.6;
 		}
 		.container {
@@ -330,10 +330,11 @@
 </head>
 <body>
     <div class="container">
+		<img src="NT.png" alt="Logo" style="height:300px; width:auto; display:block;">
         <h1>ລະບົບບັນທຶກລາຍຮັບ-ລາຍຈ່າຍ</h1>
         
         <div class="auto-save-notice">
-            <p>✅ ບັນທຶກຂໍ້ມູນເປັນ JSON </p>
+            <p>ສ້າງໂດຍ FB: Sombath Phimmasone</p>
         </div>
         
         <div class="summary">
@@ -725,3 +726,4 @@
 </script>
 </body>
 </html>
+
